feat(oauth2): add feature flag to disable RFC 8707 resource parameter validation