@@ -20,103 +20,145 @@ import io.gravitee.am.gateway.handler.oauth2.exception.InvalidResourceException;
 import io.gravitee.am.gateway.handler.oauth2.service.request.AuthorizationRequest;
 import io.gravitee.am.model.ProtectedResource;
 import io.reactivex.rxjava3.observers.TestObserver;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.core.env.Environment;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ResourceValidationServiceImplTest {
+@ExtendWith(MockitoExtension.class)
+class ResourceValidationServiceImplTest {
 
     @Mock
     private ProtectedResourceManager protectedResourceManager;
 
+    @Mock
+    private Environment environment;
+
     private ResourceValidationServiceImpl service;
 
-    @Before
-    public void init() {
-        service = new ResourceValidationServiceImpl(protectedResourceManager);
+    @BeforeEach
+    void setUp() {
+        // Default: feature flag enabled (true)
+        when(environment.getProperty(ResourceValidationServiceImpl.LEGACY_RFC8707_ENABLED, Boolean.class, true)).thenReturn(true);
+        service = new ResourceValidationServiceImpl(protectedResourceManager, environment);
     }
 
-    @Test
-    public void shouldRejectUnknownResource_withInvalidTarget() {
+    // Helper methods to reduce duplication
+    private ResourceValidationServiceImpl createServiceWithFeatureFlag(boolean enabled) {
+        when(environment.getProperty(ResourceValidationServiceImpl.LEGACY_RFC8707_ENABLED, Boolean.class, true)).thenReturn(enabled);
+        return new ResourceValidationServiceImpl(protectedResourceManager, environment);
+    }
+
+    private AuthorizationRequest createRequestWithResources(String... resources) {
         AuthorizationRequest request = new AuthorizationRequest();
-        request.setResources(Set.of("https://api.example.com/unknown"));
+        request.setResources(Set.of(resources));
+        return request;
+    }
 
-        when(protectedResourceManager.entities()).thenReturn(Collections.emptyList());
+    private ProtectedResource createProtectedResource(String id, String... resourceIdentifiers) {
+        ProtectedResource resource = new ProtectedResource();
+        resource.setId(id);
+        resource.setResourceIdentifiers(List.of(resourceIdentifiers));
+        return resource;
+    }
 
+    private void assertValidationSucceeds(ResourceValidationServiceImpl service, AuthorizationRequest request) {
+        TestObserver<Void> observer = service.validate(request).test();
+        observer.awaitDone(1, TimeUnit.SECONDS);
+        observer.assertComplete();
+        observer.assertNoErrors();
+    }
+
+    private void assertValidationFails(ResourceValidationServiceImpl service, AuthorizationRequest request) {
         TestObserver<Void> observer = service.validate(request).test();
         observer.awaitDone(1, TimeUnit.SECONDS);
         observer.assertError(t -> t instanceof InvalidResourceException &&
                 ((InvalidResourceException) t).getOAuth2ErrorCode().equals("invalid_target"));
     }
 
-    @Test
-    public void shouldAcceptKnownResource() {
-        AuthorizationRequest request = new AuthorizationRequest();
-        request.setResources(Set.of("https://api.example.com/photos"));
+    @Nested
+    class WhenValidationEnabled {
 
-        ProtectedResource known = new ProtectedResource();
-        known.setId("res-1");
-        known.setResourceIdentifiers(Arrays.asList("https://api.example.com/photos", "https://api.example.com/albums"));
+        @Test
+        void shouldRejectUnknownResource() {
+            AuthorizationRequest request = createRequestWithResources("https://api.example.com/unknown");
+            when(protectedResourceManager.entities()).thenReturn(Collections.emptyList());
 
-        when(protectedResourceManager.entities()).thenReturn(List.of(known));
+            assertValidationFails(service, request);
+        }
 
-        TestObserver<Void> observer = service.validate(request).test();
-        observer.awaitDone(1, TimeUnit.SECONDS);
-        observer.assertComplete();
-        observer.assertNoErrors();
+        @Test
+        void shouldAcceptKnownResource() {
+            AuthorizationRequest request = createRequestWithResources("https://api.example.com/photos");
+            ProtectedResource known = createProtectedResource("res-1",
+                    "https://api.example.com/photos", "https://api.example.com/albums");
+            when(protectedResourceManager.entities()).thenReturn(List.of(known));
+
+            assertValidationSucceeds(service, request);
+        }
+
+        @Test
+        void shouldRejectWhenSomeResourcesUnknown() {
+            AuthorizationRequest request = createRequestWithResources(
+                    "https://api.example.com/photos", "https://api.example.com/unknown");
+            ProtectedResource known = createProtectedResource("res-1",
+                    "https://api.example.com/photos", "https://api.example.com/albums");
+            when(protectedResourceManager.entities()).thenReturn(List.of(known));
+
+            assertValidationFails(service, request);
+        }
+
+        @Test
+        void shouldAcceptWhenAllRequestedResourcesAreKnown() {
+            AuthorizationRequest request = createRequestWithResources(
+                    "https://api.example.com/photos", "https://api.example.com/albums");
+            ProtectedResource known = createProtectedResource("res-1",
+                    "https://api.example.com/photos", "https://api.example.com/albums");
+            when(protectedResourceManager.entities()).thenReturn(List.of(known));
+
+            assertValidationSucceeds(service, request);
+        }
+
+        @Test
+        void shouldAcceptWhenNoResourcesRequested() {
+            AuthorizationRequest request = new AuthorizationRequest();
+            request.setResources(Collections.emptySet());
+
+            assertValidationSucceeds(service, request);
+        }
     }
 
-    @Test
-    public void shouldRejectWhenSomeResourcesUnknown() {
-        AuthorizationRequest request = new AuthorizationRequest();
-        request.setResources(Set.of("https://api.example.com/photos", "https://api.example.com/unknown"));
+    @Nested
+    class WhenValidationDisabled {
 
-        ProtectedResource known = new ProtectedResource();
-        known.setId("res-1");
-        known.setResourceIdentifiers(Arrays.asList("https://api.example.com/photos", "https://api.example.com/albums"));
+        @Test
+        void shouldSkipValidation_whenInvalidResourceRequested() {
+            // When feature flag is disabled, validation is skipped, so protectedResourceManager is never called
+            ResourceValidationServiceImpl serviceWithFlagDisabled = createServiceWithFeatureFlag(false);
+            AuthorizationRequest request = createRequestWithResources("https://api.example.com/unknown");
 
-        when(protectedResourceManager.entities()).thenReturn(List.of(known));
+            assertValidationSucceeds(serviceWithFlagDisabled, request);
+        }
 
-        TestObserver<Void> observer = service.validate(request).test();
-        observer.awaitDone(1, TimeUnit.SECONDS);
-        observer.assertError(t -> t instanceof InvalidResourceException &&
-                ((InvalidResourceException) t).getOAuth2ErrorCode().equals("invalid_target"));
-    }
+        @Test
+        void shouldSkipValidation_whenMultipleInvalidResourcesRequested() {
+            // When feature flag is disabled, validation is skipped, so protectedResourceManager is never called
+            ResourceValidationServiceImpl serviceWithFlagDisabled = createServiceWithFeatureFlag(false);
+            AuthorizationRequest request = createRequestWithResources(
+                    "https://api.example.com/unknown1", "https://api.example.com/unknown2");
 
-    @Test
-    public void shouldPassWhenAllRequestedAreKnown() {
-        AuthorizationRequest request = new AuthorizationRequest();
-        request.setResources(Set.of("https://api.example.com/photos", "https://api.example.com/albums"));
-
-        ProtectedResource known = new ProtectedResource();
-        known.setId("res-1");
-        known.setResourceIdentifiers(Arrays.asList("https://api.example.com/photos", "https://api.example.com/albums"));
-
-        when(protectedResourceManager.entities()).thenReturn(List.of(known));
-
-        TestObserver<Void> observer = service.validate(request).test();
-        observer.awaitDone(1, TimeUnit.SECONDS);
-        observer.assertComplete();
-        observer.assertNoErrors();
-    }
-
-    @Test
-    public void shouldPassWhenNoProtectedResourcesAndNoRequestedResources() {
-        AuthorizationRequest request = new AuthorizationRequest();
-        request.setResources(Collections.emptySet());
-
-        TestObserver<Void> observer = service.validate(request).test();
-        observer.awaitDone(1, TimeUnit.SECONDS);
-        observer.assertComplete();
-        observer.assertNoErrors();
+            assertValidationSucceeds(serviceWithFlagDisabled, request);
+        }
     }
 }
 
